@@ -9,8 +9,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - Andrew Ford's Apache::FakeRequest patch
 
-- sync ApacheModulePerl.dsp -> .mak, add Util.c, etc. sources
-
 - <Perl>/%Apache::ReadConfig:: brokeness (My::configure() example, Eric Cholet)
 
 - sort out =pod configuration directives
